--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Django==4.2.5
 djangorestframework==3.14.0
 Pillow==10.0.1
- djangorestframework-simplejwt==5.3.1
+djangorestframework-simplejwt==5.3.1
+django-environ==0.11.2
+drf-spectacular==0.27.0
+mysqlclient==2.2.0
+Pillow==10.0.1
